--- a/homework/HW_3.ipynb
+++ b/homework/HW_3.ipynb
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "def variance(nums):\n",
-    "    m = mmean(nums)\n",
+    "    m = mean(nums)\n",
     "    sq = [(x - m)**2 for x in nums]\n",
     "    ssum = np.sum(sq)\n",
     "    return ssum/len(nums)\n",
