--- a/homework/CS295_HW_6.ipynb
+++ b/homework/CS295_HW_6.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "## Question 1\n",
     "\n",
-    "Implement the GMW protocol for MPC. Your solution should handle both addition and multiplication gates."
+    "Implement the BGW protocol for MPC. Your solution should handle both addition and multiplication gates."
    ]
   },
   {
@@ -84,7 +84,7 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "553e6ba00573adcf60e9789390a0573e",
+     "checksum": "30abd23b98f1bbcd879a6ab5d8a90d9b",
      "grade": false,
      "grade_id": "cell-ea00a41345a34952",
      "locked": false,
@@ -95,7 +95,7 @@
    },
    "outputs": [],
    "source": [
-    "class GMWParty(Party):\n",
+    "class BGWParty(Party):\n",
     "    def receive_inputs(self, input_wire_values, circuit, eval_order, t, n):\n",
     "        self.wire_values = input_wire_values\n",
     "        self.circuit = circuit\n",
@@ -105,7 +105,7 @@
     "        self.n = n\n",
     "    \n",
     "    def round_n(self, round_num, parties):\n",
-    "        \"\"\"Perform one round of the GMW protocol. Reference Section 3.3 in 'Pragmatic MPC.'\"\"\"\n",
+    "        \"\"\"Perform one round of the BGW protocol. Reference Section 3.3 in 'Pragmatic MPC.'\"\"\"\n",
     "        # YOUR CODE HERE\n",
     "        raise NotImplementedError()"
    ]
@@ -116,14 +116,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_gmw(inputs, circuit, eval_order, output_wires):\n",
-    "    \"\"\"Runs the GMW Protocol. Feel free to change this driver function if it helps you to do so.\"\"\"\n",
+    "def run_bgw(inputs, circuit, eval_order, output_wires):\n",
+    "    \"\"\"Runs the BGW Protocol. Feel free to change this driver function if it helps you to do so.\"\"\"\n",
     "    n = 6\n",
     "    t = 3\n",
     "    \n",
     "    # calculate the input shares\n",
     "    input_shares = {w: share_shamir(t, n, x) for w,x in inputs.items()}\n",
-    "    parties = [GMWParty(_PRIME) for _ in range(n)]\n",
+    "    parties = [BGWParty(_PRIME) for _ in range(n)]\n",
     "    \n",
     "    # split the shares up for the parties\n",
     "    keys = input_shares.keys()\n",
@@ -160,7 +160,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "23234ccf80d3dabcd45655dc7f14b765",
+     "checksum": "8fb31ca4a0688b9f05b5777a77fb6d2b",
      "grade": true,
      "grade_id": "cell-0ab73d1e6dabb1ca",
      "locked": true,
@@ -180,7 +180,7 @@
     "\n",
     "eval_order = list(circuit.keys())\n",
     "\n",
-    "result = run_gmw(inputs, circuit, eval_order, ['w3'])\n",
+    "result = run_bgw(inputs, circuit, eval_order, ['w3'])\n",
     "print('Result:', result)\n",
     "assert result == [66]"
    ]
@@ -222,7 +222,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "998f54a683dc12810cc69eeef5bedee4",
+     "checksum": "b931bdc9016bdfca665fac2b0261c2b7",
      "grade": true,
      "grade_id": "cell-5c2263fd7870f916",
      "locked": true,
@@ -243,7 +243,7 @@
     "\n",
     "eval_order = list(circuit.keys())\n",
     "\n",
-    "result = run_gmw(inputs, circuit, eval_order, [eval_order[-1]])\n",
+    "result = run_bgw(inputs, circuit, eval_order, [eval_order[-1]])\n",
     "print('Result:', result)\n",
     "assert result == [2653]"
    ]
