--- a/exercises/CS295_Ex_11-13-20.ipynb
+++ b/exercises/CS295_Ex_11-13-20.ipynb
@@ -41,6 +41,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 1\n",
+    "\n",
+    "Implement `add_block`, which constructs a new block to hold a transaction and adds it to the blockchain."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -83,6 +92,15 @@
    "source": [
     "blockchain, final_hash = add_block(Transaction('Joe', 'Bob', 500), blockchain)\n",
     "blockchain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 2\n",
+    "\n",
+    "Implement `check_blockchain`, which checks that the blockchain hasn't been tampered with. The `check_blockchain` function takes the expected hash for the last block in the blockchain, and throws an error if any issue is found."
    ]
   },
   {
